// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringGT(5) expectTypeFailure(1): TYPE_FAILURE::StringGT(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 1,
      "expected": [Function],
      "message": "Invalid value 1 supplied to String",
      "path": Array [],
    },
  ],
  "value": 1,
}
`;

exports[`StringGT(5) expectTypeFailure(4444): TYPE_FAILURE::StringGT(4444) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "4444",
      "expected": [Function],
      "message": "Invalid value \\"4444\\" supplied to StringGT",
      "path": Array [],
    },
  ],
  "value": "4444",
}
`;

exports[`StringGT(5) expectTypeFailure(55555): TYPE_FAILURE::StringGT(55555) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "55555",
      "expected": [Function],
      "message": "Invalid value \\"55555\\" supplied to StringGT",
      "path": Array [],
    },
  ],
  "value": "55555",
}
`;
